# vectorization

./: .dockerignore  .gitignore  27p_stencil_intrinsics_v1.c  27p_stencil_intrinsics_v2.c  27p_stencil_v2  27p_stencil_v2_avx512  27p_stencil_v2_avx512.c  27p_stencil_v2_avx_omp.c  CMakeLists.txt  Dockerfile  Makefile  README.md  a.out  docker-compose.yml  main  makefile  perf.data.old  resultados.csv  sources.md  speedup_geral.csv
demos/: 27p_stencil.c  27p_stencil_perf.c  27p_stencil_refact.c  27p_stencil_v2.c  27p_stencil_v2_avx_omp.c  add_arrays.cc  bcsr.h  bcsr2d.py  bcsr_class.h  blend.cc  blocked_ilu.cpp  blocked_ilu_class.cpp  broadcast.cc  ex1.cc  ex2.cc  ex3.cc  fma.cc  fma_avx512.cc  fma_double.cc  fma_int.cc  hadd_512.cc  highway_1.cpp  highway_vector_sum.cpp  ilu.cpp  ilu_test.cpp  lu_solver.cpp  minus_vector.cc  naive_sum_vector.cc  perf.data  perf.data.old  permute.cc  sum_vector.cc  sum_vectors.cc  vector_sum.cpp  zeros.cc
experiments/spmv/: spmv_general.csv  spmv_runs.csv
experiments/spmv/gcc/: spmv_general.csv  spmv_runs.csv
experiments/spmv/icx/: spmv_general.csv  spmv_runs.csv
libs/: CMakeLists.txt
libs/bc_matvec/: bc_matvec.cc  bc_matvec.cpp  bc_matvec.h
libs/bcsr/: bcsr.cpp  bcsr.h
libs/benchmarks/benchmark_base/: benchmark_base.cpp  benchmark_base.h
libs/benchmarks/ilu0/: ilu0_benchmarks.cpp  ilu0_benchmarks.h
libs/benchmarks/spmv/: spmv_benchmarks.cc  spmv_benchmarks.cpp  spmv_benchmarks.h
libs/block_matrix_ops/: block_matrix_ops.cpp  block_matrix_ops.h
libs/cli/: cli.cpp  cli.h
libs/helpers/: helpers.h
libs/ilu0/: ilu0.cpp  ilu0.h
libs/spmv/: spmv.cpp  spmv.h
libs/utils/: utils.cpp  utils.h
plots/: main.py  spmv_speedup.py
plots/plots/: spmv_speedup.py
results/: resultados.csv  speedup_geral.csv
src/: main.cc  main.cpp
